--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,9 @@
         android:layout_height="wrap_content"
         android:text="Intent String" />
 
+    <Button
+        android:id="@+id/button_intent_array_list_string"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Intent Array List String" />
 </LinearLayout>
