--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button_intent_string"
+        android:id="@+id/buttonCamera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Intent String" />
+        android:drawableLeft="@android:drawable/ic_menu_camera"
+        android:text="Camera" />
 
     <Button
-        android:id="@+id/button_intent_serializable"
+        android:id="@+id/buttonGallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Intent Serializable" />
+        android:layout_alignParentRight="true"
+        android:drawableLeft="@android:drawable/ic_menu_gallery"
+        android:text="Gallery" />
 
-    <Button
-        android:id="@+id/button_intent_parcelable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Intent Parcelable" />
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_below="@id/buttonGallery"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher" />
+</RelativeLayout>
