--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,19 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="Search"
-        android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="always"/>
-
-    <item
-        android:title="Setting"
-        android:id="@+id/item_setting"
-        android:icon="@drawable/ic_add" />
-
-    <item android:title="Share">
+        android:title="Sort"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
+        app:showAsAction="always">
         <menu>
-            <item android:title="Facebook"/>
-            <item android:title="Twitter"/>
+            <item
+                android:id="@+id/item_sort_time"
+                android:title="Time"/>
         </menu>
     </item>
 </menu>
