--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,12 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="Sort"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:id="@+id/item_search"
+        android:title="Search"
+        android:icon="@drawable/ic_search"
         app:showAsAction="always">
         <menu>
             <item
-                android:id="@+id/item_sort_time"
+                android:id="@+id/item_time"
                 android:title="Time"/>
         </menu>
     </item>
